Fix typo in environment_config.yaml and update README
Change-Id: Iebf6b3813cfd140184ca23999f085813216473a7

--- a/environment_config.yaml
+++ b/environment_config.yaml
@@ -33,7 +33,7 @@ attributes:
 #          label: "Fibre Channel"
 #          description: "Enables Fibre Channel protocol for block storage volumes"
     label: "Protocol for Pure Storage block access"
-    description: 'Select block storage protocl for FlashArray.'
+    description: 'Select block storage protocol for FlashArray.'
     weight: 60
     type: "radio"
   pure_chap:
