Update code to start looking at glance image cache params
Change-Id: Icdcb6a7745ddfb8dbe870ddac990a415018431d0

--- a/environment_config.yaml
+++ b/environment_config.yaml
@@ -74,7 +74,7 @@ attributes:
     weight: 60
     type: "radio"
   pure_chap:
-    value: "true"
+    value: "false"
     values:
         - data: "true"
           label: "True"
