Add FCZM information. Remove end spaces from lines
Change-Id: Ie93125bc25d6e08806bfc99b4056e74b04e31740

--- a/environment_config.yaml
+++ b/environment_config.yaml
@@ -12,8 +12,8 @@ attributes:
     weight: 15
     type: "text"
     regex:
-      source: '\S'
-      error: "IP field cannot be empty"
+      source: '^(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)$'
+      error: "Error: Enter in regular IP address dot notation"
   pure_api:
     value: ''
     label: 'API Token for Pure Storage (pure_api_token)'
@@ -22,7 +22,7 @@ attributes:
     type: "text"
     regex:
       source: '\S'
-      error: "API token field cannot be empty"
+      error: "Error: API token field cannot be empty"
   pure_glance_image_cache:
     value: "false"
     values:
@@ -47,7 +47,7 @@ attributes:
          action: "hide"
     regex:
       source: '^[0-9]+$'
-      error: "Only numbers are permitted"
+      error: "Error: Only numbers are permitted"
   pure_glance_cache_size:
     value: '0'
     label: 'Glance Image Cache Size (image_volume_cache_max_size_gb)'
@@ -59,7 +59,7 @@ attributes:
          action: "hide"
     regex:
       source: '^[0-9]+$'
-      error: "Only numbers are permitted"
+      error: "Error: Only numbers are permitted"
   pure_protocol:
     value: "iSCSI"
     values:
@@ -73,6 +73,224 @@ attributes:
     description: 'Select block storage protocol for FlashArray.'
     weight: 60
     type: "radio"
+  pure_fabric_count:
+    value: '2'
+    type: "radio"
+    weight: 61
+    values:
+       - data: '1'
+         label: "1"
+       - data: '2'
+         label: "2"
+    label: "Number of SAN fabrics"
+    description: "Number of SAN fabrics connected to compute and controller nodes"
+    restrictions:
+       - condition:  "settings:fuel-plugin-purestorage-cinder.pure_protocol.value != 'FC'"
+         action: "hide"
+  pure_fabric_name_1:
+    value: ''
+    label: "Name of Fabric 1"
+    description: "Name of the active zone set for the zoning VSAN if your switch vendor is CISCO, or name of active zone configuration if Brocade. Additionally used to define zone_name_prefix."
+    weight: 61
+    type: "text"
+    restrictions:
+       - condition: "settings:fuel-plugin-purestorage-cinder.pure_protocol.value != 'FC'"
+         action: "hide"
+    regex:
+      source: '/S'
+      error: "Error: Fabric name cannot be blank"
+  pure_switch_vendor_1:
+    value: ''
+    values:
+       - data: "Brocade"
+         label: "Brocade"
+         description: 'Fibre Channel SAN Switch provider'
+       - data: "CISCO"
+         label: "CISCO"
+         description: 'Fibre Channel SAN Switch provider'
+    label: "Fibre Channel SAN Switch Provider for Fabric 1"
+    description: "FC Vendor"
+    weight: 61
+    type: "radio"
+    restrictions:
+       - condition: "settings:fuel-plugin-purestorage-cinder.pure_protocol.value != 'FC'"
+         action: "hide"
+  pure_fabric_ip_1:
+    value: ''
+    type: "text"
+    weight: 61
+    label: "IP address"
+    description: "Management IP address of SAN switch for fabric number 1"
+    restrictions:
+       - condition:  "settings:fuel-plugin-purestorage-cinder.pure_protocol.value != 'FC'"
+         action: "hide"
+    regex:
+      source: '^(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)$'
+      error: "Error: Enter in regular IP address dot notation"
+  pure_username_1:
+    value: ''
+    type: "text"
+    weight: 61
+    label: "Fabric User ID for Fabric 1"
+    description: "Fabric switch username (with admin privilages)"
+    restrictions:
+       - condition:  "settings:fuel-plugin-purestorage-cinder.pure_protocol.value != 'FC'"
+         action: "hide"
+    regex:
+      source: '/S'
+      error: "Error: Username cannot be blank"
+  pure_password_1:
+    value: ''
+    type: "text"
+    weight: 61
+    label: "Password for fabric switch in Fabric 1"
+    description: "Fabric switch password for username above"
+    restrictions:
+       - condition:  "settings:fuel-plugin-purestorage-cinder.pure_protocol.value != 'FC'"
+         action: "hide"
+    regex:
+      source: '/S'
+      error: "Error: Password cannot be blank"
+  pure_zoning_policy_1:
+    value: 'initiator-target'
+    values:
+       - data: "initiator-target"
+         label: "initiator-target"
+       - data: "target"
+         label: "target"
+    label: "Zoning Policy"
+    description: "Fabric 1 Zoning Policy"
+    weight: 61
+    type: "radio"
+    restrictions:
+       - condition: "settings:fuel-plugin-purestorage-cinder.pure_protocol.value != 'FC'"
+         action: "hide"
+  pure_vsan_1:
+    value: ''
+    label: "VSAN"
+    description: "Number of zoning VSAN with active zone set which is the same as the name of Fabric 1"
+    weight: 61
+    type: "text"
+    restrictions:
+       - condition: "settings:fuel-plugin-purestorage-cinder.pure_protocol.value != 'FC' and settings:fuel-plugin-purestorage-cinder.pure_switch_vendor_1 != 'CISCO'"
+         action: "hide"
+    regex:
+      source: '^[0-9]{1, 4093}$`'
+      error: "Error: VSAN must be in range 1-4093"
+  pure_principal_wwn_1:
+    value: ''
+    label: "Principal Switch WWN"
+    description: "WWN of switch designated as principal in your fabric. Determine from FOS command fabricShow."
+    weight: 61
+    type: "text"
+    restrictions:
+       - condition: "settings:fuel-plugin-purestorage-cinder.pure_protocol.value != 'FC' and settings:fuel-plugin-purestorage-cinder.pure_switch_vendor_1 != 'Brocade'"
+         action: "hide"
+    regex:
+      source: '^([0-9a-fA-F][0-9a-fA-F]:){7}([0-9a-fA-F][0-9a-fA-F])$'
+      error: "Error: Enter in WWN address format xx:xx:xx:xx:xx:xx:xx:xx"
+  pure_fabric_name_2:
+    value: ''
+    label: "Name of Fabric 2"
+    description: "Name of the active zone set for zoning VSAN if your switch vendor is CISCO, or name of active zone configuration if Brocade. Additionally used to define zone_name_prefix."
+    weight: 62
+    type: "text"
+    restrictions:
+       - condition: "settings:fuel-plugin-purestorage-cinder.pure_protocol.value != 'FC' and settings:fuel-plugin-purestorage-cinder.pure_fabric_count != '2'"
+         action: "hide"
+    regex:
+      source: '/S'
+      error: "Error: Fabric name cannot be blank"
+  pure_switch_vendor_2:
+    value: ''
+    values:
+       - data: "Brocade"
+         label: "Brocade"
+         description: 'Fibre Channel SAN Switch provider'
+       - data: "CISCO"
+         label: "CISCO"
+         description: 'Fibre Channel SAN Switch provider'
+    label: "Fibre Channel SAN Switch Provider for Fabric 2"
+    description: "FC Vendor"
+    weight: 62
+    type: "radio"
+    restrictions:
+       - condition: "settings:fuel-plugin-purestorage-cinder.pure_protocol.value != 'FC' and settings:fuel-plugin-purestorage-cinder.pure_fabric_count != '2'"
+         action: "hide"
+  pure_fabric_ip_2:
+    value: ''
+    type: "text"
+    weight: 62
+    label: "IP address"
+    description: "Management IP address of SAN switch for fabric number 2"
+    restrictions:
+       - condition:  "settings:fuel-plugin-purestorage-cinder.pure_protocol.value != 'FC' and settings:fuel-plugin-purestorage-cinder.pure_fabric_count != '2'"
+         action: "hide"
+    regex:
+      source: '^(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)$'
+      error: "Error: Enter in regular IP address dot notation"
+  pure_username_2:
+    value: ''
+    type: "text"
+    weight: 62
+    label: "Fabric User ID for Fabric 2"
+    description: "Fabric switch username (with admin privilages)"
+    restrictions:
+       - condition:  "settings:fuel-plugin-purestorage-cinder.pure_protocol.value != 'FC' and settings:fuel-plugin-purestorage-cinder.pure_fabric_count != '2'"
+         action: "hide"
+    regex:
+      source: '/S'
+      error: "Error: Username cannot be blank"
+  pure_password_2:
+    value: ''
+    type: "text"
+    weight: 62
+    label: "Password for fabric switch in Fabric 2"
+    description: "Fabric switch password for username above"
+    restrictions:
+       - condition:  "settings:fuel-plugin-purestorage-cinder.pure_protocol.value != 'FC' and settings:fuel-plugin-purestorage-cinder.pure_fabric_count != '2'"
+         action: "hide"
+    regex:
+      source: '/S'
+      error: "Error: Password cannot be blank"
+  pure_zoning_policy_2:
+    value: 'initiator-target'
+    values:
+       - data: "initiator-target"
+         label: "initiator-target"
+       - data: "target"
+         label: "target"
+    label: "Zoning Policy"
+    description: "Fabric 2 Zoning Policy"
+    weight: 62
+    type: "radio"
+    restrictions:
+       - condition:  "settings:fuel-plugin-purestorage-cinder.pure_protocol.value != 'FC' and settings:fuel-plugin-purestorage-cinder.pure_fabric_count != '2'"
+         action: "hide"
+  pure_vsan_2:
+    value: ''
+    label: "VSAN"
+    description: "Number of zoning VSAN with active zone set which is the same as the name of Fabric 2"
+    weight: 62
+    type: "text"
+    restrictions:
+       - condition: "settings:fuel-plugin-purestorage-cinder.pure_protocol.value != 'FC' and settings:fuel-plugin-purestorage-cinder.pure_switch_vendor_2 != 'Brocade' and settings:fuel-plugin-purestorage-cinder.pure_fabric_count != '2'"
+         action: "hide"
+    regex:
+      source: '^[0-9]{1, 4093}$`'
+      error: "Error: VSAN must be in range 1-4093"
+  pure_principal_wwn_2:
+    value: ''
+    label: "Principal Switch WWN"
+    description: "WWN of switch designated as principal in your fabric. Determine from FOS command fabricShow."
+    weight: 62
+    type: "text"
+    restrictions:
+       - condition: "settings:fuel-plugin-purestorage-cinder.pure_protocol.value != 'FC' and settings:fuel-plugin-purestorage-cinder.pure_fabric_count != '2' and settings:fuel-plugin-purestorage-cinder.pure_switch_vendor_1 != 'Brocade'"
+         action: "hide"
+    regex:
+      source: '^([0-9a-fA-F][0-9a-fA-F]:){7}([0-9a-fA-F][0-9a-fA-F])$'
+      error: "Error: Enter in WWN address format xx:xx:xx:xx:xx:xx:xx:xx"
   pure_chap:
     value: "false"
     values:
