WIP - New FCZM code and MPIO file
Added FC backend code and updated GUI yaml layout
Reformat yaml and text, remove principal_switch_wwn as
deprecated and fix fc-zone-manager stanza build section
Reorder options
Add in option to use manual or automatic FCZM - change
YAML conditions for this and add in code check for this
condition

Add multipath.conf file with Pure defaults

Update docs to include API and VIP instructions and multipath
notes and cleanup spaces and tabs

Change-Id: Ia3a524f0a48689a502c73f3bde93c189c4e74751

--- a/deployment_scripts/puppet/modules/plugin_purestorage_cinder/files/multipath.conf
+++ b/deployment_scripts/puppet/modules/plugin_purestorage_cinder/files/multipath.conf
@@ -1,3 +1,19 @@
+blacklist {
+  devnode "^(ram|raw|loop|fd|md|dm-|sr|scd|st)[0-9]*"
+  devnode "^hd[a-z][0-9]*"
+  devnode "^cciss!c[0-9]d[0-9]*[p[0-9]*]"
+}
+
+defaults {
+  verbosity	2
+  polling_interval	10
+  wwids_file	/etc/multipath/wwids
+}
+
+blacklist_exceptions {
+}
+
+
 devices {
     device {
         vendor                "PURE"
