Upgrade to Fuel 8.0 and FPB 3.0
Change-Id: Ib354e83e8ea4911c9d8ceec3a7f12c976f279560

--- a/deployment_tasks.yaml
+++ b/deployment_tasks.yaml
@@ -1,13 +1,14 @@
 # Deployment tasks
-- role: [primary-controller, controller]
+- id: configure_purestorage_controller
+  role: ['primary-controller', 'controller']
   stage: post_deployment/6000
   type: puppet
   parameters:
     puppet_manifest: puppet/manifests/controller.pp
     puppet_modules:  "puppet/modules/:/etc/puppet/modules/"
     timeout: 360
-
-- role: [compute]
+- id: configure_purestorage_compute
+  role: ['compute']
   stage: post_deployment/6001
   type: puppet
   parameters:
