--- a/metadata.yaml
+++ b/metadata.yaml
@@ -14,6 +14,11 @@ releases:
     mode: ['ha', 'multinode']
     deployment_scripts_path: deployment_scripts/
     repository_path: repositories/ubuntu
+  - os: ubuntu
+    version: liberty-8.0
+    mode: ['ha', 'multinode']
+    deployment_scripts_path: deployment_scripts/
+    repository_path: repositories/ubuntu
 
 # Version of plugin package
-package_version: '2.0.0'
+package_version: '3.0.0'
