--- a/deployment_tasks.yaml
+++ b/deployment_tasks.yaml
@@ -1,14 +1,17 @@
 # Deployment tasks
-- role: [primary-controller, controller]
-  stage: post_deployment/6000
+- id: configure_purestorage_controller
+  role: ['primary-controller', 'controller']
+  required_for: [post_deployment_end]
+  requires: [post_deployment_start]
   type: puppet
   parameters:
     puppet_manifest: puppet/manifests/controller.pp
     puppet_modules:  "puppet/modules/:/etc/puppet/modules/"
     timeout: 360
-
-- role: [compute]
-  stage: post_deployment/6001
+- id: configure_purestorage_compute
+  role: ['compute']
+  required_for: [post_deployment_end]
+  requires: [post_deployment_start]
   type: puppet
   parameters:
     puppet_manifest: puppet/manifests/compute.pp
