--- a/metadata.yaml
+++ b/metadata.yaml
@@ -7,6 +7,7 @@ licenses: ['Apache License Version 2.0']
 authors: ['Simon Dodsley <simon@purestorage.com>']
 homepage: 'https://github.com/openstack/fuel-plugin-purestorage-cinder'
 groups: ['storage::cinder']
+is_hotpluggable: false
 
 releases:
   - os: ubuntu
@@ -21,4 +22,4 @@ releases:
     repository_path: repositories/ubuntu
 
 # Version of plugin package
-package_version: '3.0.0'
+package_version: '4.0.0'
