Implement Consistency Groups Option
Add GUI radio button to allow selection of consistency groups.
Default is false, but if true then provide a modified policy.json
file with CG parameters configured correctly.

Change-Id: I73b2dd592c4d66945943470269d52245f05d67e8

--- a/environment_config.yaml
+++ b/environment_config.yaml
@@ -38,6 +38,19 @@ attributes:
     description: 'Enable/Disable multipathing for image transfers.'
     weight: 25
     type: "radio"
+  pure_cg:
+    value: "false"
+    values:
+        - data: "true"
+          label: "True"
+          description: "Enables Cinder Consistency Groups"
+        - data: "false"
+          label: "False"
+          description: "Disables Cinder Consistency Groups"
+    label: "Cinder Consistency Groups"
+    description: 'Enable/Disable consistency groups for ALL tenants and users.'
+    weight: 25
+    type: "radio"
   pure_nova_multipath:
     value: "false"
     values:
